src/main/kotlin/com/team1/mvp_test/common/error/S3ErrorMessage.kt
package com.team1.mvp_test.common.error

enum class S3ErrorMessage(val message: String) {
    FILE_TYPE_NOT_VALID("해당 파일 형식은 지원 하지 않습니다.")
}